[package]
edition = "2021"
name = "geckodriver-librs"
version = "0.36.0"
authors = ["Mozilla"]
include = [
    "/.cargo",
    "/build.rs",
    "/src"
  ]
description = "Fork of `geckodriver` to allow use as a crate in other Rust projects"
readme = "README.md"
keywords = [
    "firefox",
    "httpd",
    "mozilla",
    "w3c",
    "webdriver",
  ]
license = "MPL-2.0"
repository = "https://github.com/browsh-org/geckodriver-librs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4.6"
clap = { version = "4", default-features = false, features = ["cargo", "std", "suggestions", "wrap_help", "string"] }
# Depend on flate2 to enable the rust backend (the default) for flate2 used by the zip crate.
flate2 = "1"
hyper = "0.14"
icu_segmenter = { version = "2.0", default-features = false, features = ["auto", "compiled_data"] }
lazy_static = "1.0"
log = { version = "0.4", features = ["std"] }
marionette = "0.7.0"
mozdevice = "0.5.4"
mozprofile = "0.9.4"
mozrunner = "0.15.4"
mozversion = "0.5.3"
regex = { version="1.0", default-features = false, features = ["perf", "std"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
thiserror = "1"
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }
webdriver = "0.53.0"
yaml-rust = { version = "0.10", package = "yaml-rust2" }
zip = { version = "2.1.2", default-features = false, features = ["deflate-flate2", "flate2"] }
mozilla-central-workspace-hack = { version = "0.1", features = ["geckodriver"], optional = true }

[dev-dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
tempfile = "3"

[[bin]]
path = "src/bin.rs"
name = "geckodriver"
